kubernetes/apps/tools/uptime/config/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-ingress
  namespace: tools
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.${EXTERNAL_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: forward-headers
          namespace: networking
      services:
        - name: uptime
          port: 3001
          namespace: tools
    - match: Host(`status.home.${EXTERNAL_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: ipwhitelist
          namespace: networking
      services:
        - name: uptime
          port: 3001
          namespace: tools
  tls:
    secretName: uptime-tls
